force-app/main/default/objects/Engagement__c/Engagement__c.object-meta.xml
<CustomObject>
    <description>Track the donor engagement with the foundation.</description>
    <label>Engagement</label>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>