force-app/main/default/objects/Engagement__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <label>Donation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Gift</fullName>
            </value>
            <value>
                <fullName>Medium Gift</fullName>
            </value>
            <value>
                <fullName>Large Gift</fullName>
            </value>
            <value>
                <fullName>Major Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>