force-app/main/default/objects/Engagement__c/fields/Follow_up_Needed__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value to indicate if follow-up is needed with the donor.</description>
    <label>Follow-up Needed</label>
    <type>Checkbox</type>
</CustomField>