force-app/main/default/objects/Engagement__c/fields/Potential_Donation__c.field-meta.xml
<CustomField>
    <fullName>Potential_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field to indicate possible donation.</description>
    <label>Potential Donation</label>
    <type>Checkbox</type>
</CustomField>