force-app/main/default/objects/Engagement__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Program record.</description>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Engagement</relationshipLabel>
    <relationshipName>Engagement</relationshipName>
    <type>Lookup</type>
</CustomField>