force-app/main/default/objects/Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Donation_Type__c</columns>
    <columns>Potential_Donation__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>